# eqiunoxproject

./: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
backend/: README.md  cert.pem  key.pem  package-lock.json  package.json
backend/src/: app.js  sequelize.js
backend/src/controllers/: paras.js
backend/src/models/: paras.js
backend/src/routes/: paras.js
contract/market-contract/: Cargo.toml  README.md
contract/nft-contract/: Cargo.toml  README.md
public/: index.html
src/: App.tsx  index.tsx
src/@types/react-alert-template-basic/: index.d.ts
src/components/: Header.tsx
src/components/Cards/: CollectionCard.tsx  EvilCard.tsx  ItemCard.tsx
src/components/Gumdrop/: Gumdrop.ts
src/components/Machine/: Machine.tsx
src/components/Sidebar/: MobileSidebar.tsx  SidebarContent.tsx
src/components/Solana/CandyMachine/: index.tsx
src/components/Solana/Machine/: Machine.tsx
src/components/Solana/MintButton/: MintButton.tsx  index.tsx
src/components/Solana/MintCountdown/: MintCountDown.tsx  index.tsx
src/constants/: address.ts  types.ts
src/containers/: Layout.tsx
src/context/: SidebarContext.tsx  WalletSelectorContext.tsx
src/context/solana/: AppWalletProvider.tsx
src/hooks/: useInterval.tsx
src/pages/: Home.tsx  NftPack.tsx  Staking.tsx
src/pages/LaunchPad/: index.tsx
src/pages/Market/: CollectionDetail.tsx  ItemDetail.tsx  index.js  index.tsx
src/pages/NftPack/: gumdrop.json  index.tsx
src/pages/Solana/NftPack/: index.tsx  (+1 more)
src/routes/: index.ts  sidebar.tsx
src/services/solana/: connection.ts  gumdrop.ts
(+7 files in other folders)
